projects/AWS-EKS-Terraform-Project/k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices
  labels:
    name: microservices
    project: nodejs-microservices-portfolio
